Project/TestProject/parse.output
Grammar

    0 $accept: start $end

    1 start: file_input

    2 file_input: star_NEWLINE_stmt ENDMARKER

    3 pick_NEWLINE_stmt: NEWLINE
    4                  | stmt

    5 star_NEWLINE_stmt: star_NEWLINE_stmt pick_NEWLINE_stmt
    6                  | %empty

    7 decorator: AT dotted_name LPAR opt_arglist RPAR NEWLINE
    8          | AT dotted_name NEWLINE

    9 opt_arglist: arglist
   10            | %empty

   11 decorators: decorators decorator
   12           | decorator

   13 decorated: decorators classdef
   14          | decorators funcdef

   15 funcdef: DEF NAME parameters COLON suite
   16        | COMPONENT NAME parameters COLON suite

   17 parameters: LPAR varargslist RPAR
   18           | LPAR RPAR

   19 varargslist: star_fpdef_COMMA pick_STAR_DOUBLESTAR
   20            | star_fpdef_COMMA fpdef opt_EQUAL_test opt_COMMA

   21 opt_EQUAL_test: EQUAL test
   22               | %empty

   23 star_fpdef_COMMA: star_fpdef_COMMA fpdef opt_EQUAL_test COMMA
   24                 | %empty

   25 opt_DOUBLESTAR_NAME: COMMA DOUBLESTAR NAME
   26                    | %empty

   27 pick_STAR_DOUBLESTAR: STAR NAME opt_DOUBLESTAR_NAME
   28                     | DOUBLESTAR NAME

   29 opt_COMMA: COMMA
   30          | %empty

   31 fpdef: NAME
   32      | LPAR fplist RPAR

   33 fplist: fpdef star_fpdef_notest COMMA
   34       | fpdef star_fpdef_notest

   35 star_fpdef_notest: star_fpdef_notest COMMA fpdef
   36                  | %empty

   37 stmt: simple_stmt
   38     | compound_stmt

   39 simple_stmt: small_stmt star_SEMI_small_stmt SEMI NEWLINE
   40            | small_stmt star_SEMI_small_stmt NEWLINE

   41 star_SEMI_small_stmt: star_SEMI_small_stmt SEMI small_stmt
   42                     | %empty

   43 small_stmt: expr_stmt
   44           | print_stmt
   45           | del_stmt
   46           | pass_stmt
   47           | flow_stmt
   48           | import_stmt
   49           | global_stmt
   50           | exec_stmt
   51           | assert_stmt

   52 expr_stmt: testlist augassign pick_yield_expr_testlist
   53          | testlist EQUAL star_EQUAL
   54          | testlist

   55 pick_yield_expr_testlist: yield_expr
   56                         | testlist

   57 star_EQUAL: pick_yield_expr_testlist EQUAL star_EQUAL
   58           | pick_yield_expr_testlist

   59 augassign: PLUSEQUAL
   60          | MINEQUAL
   61          | STAREQUAL
   62          | SLASHEQUAL
   63          | PERCENTEQUAL
   64          | AMPEREQUAL
   65          | VBAREQUAL
   66          | CIRCUMFLEXEQUAL
   67          | LEFTSHIFTEQUAL
   68          | RIGHTSHIFTEQUAL
   69          | DOUBLESTAREQUAL
   70          | DOUBLESLASHEQUAL

   71 print_stmt: PRINT opt_test
   72           | PRINT RIGHTSHIFT test opt_test_2

   73 star_COMMA_test: star_COMMA_test COMMA test
   74                | %empty

   75 opt_test: test star_COMMA_test opt_COMMA
   76         | %empty

   77 plus_COMMA_test: plus_COMMA_test COMMA test
   78                | COMMA test

   79 opt_test_2: plus_COMMA_test opt_COMMA
   80           | %empty

   81 del_stmt: DEL exprlist

   82 pass_stmt: PASS

   83 flow_stmt: break_stmt
   84          | continue_stmt
   85          | return_stmt
   86          | raise_stmt
   87          | yield_stmt

   88 break_stmt: BREAK

   89 continue_stmt: CONTINUE

   90 return_stmt: RETURN testlist
   91            | RETURN

   92 yield_stmt: yield_expr

   93 raise_stmt: RAISE test opt_test_3
   94           | RAISE

   95 opt_COMMA_test: COMMA test
   96               | %empty

   97 opt_test_3: COMMA test opt_COMMA_test
   98           | %empty

   99 import_stmt: import_name
  100            | import_from

  101 import_name: IMPORT dotted_as_names

  102 import_from: FROM pick_dotted_name IMPORT pick_STAR_import

  103 pick_dotted_name: star_DOT dotted_name
  104                 | star_DOT DOT

  105 pick_STAR_import: STAR
  106                 | LPAR import_as_names RPAR
  107                 | import_as_names

  108 import_as_name: NAME AS NAME
  109               | NAME

  110 dotted_as_name: dotted_name AS NAME
  111               | dotted_name

  112 import_as_names: import_as_name star_COMMA_import_as_name COMMA
  113                | import_as_name star_COMMA_import_as_name

  114 star_COMMA_import_as_name: star_COMMA_import_as_name COMMA import_as_name
  115                          | %empty

  116 dotted_as_names: dotted_as_name
  117                | dotted_as_names COMMA dotted_as_name

  118 dotted_name: NAME
  119            | dotted_name DOT NAME

  120 global_stmt: GLOBAL NAME star_COMMA_NAME

  121 star_COMMA_NAME: star_COMMA_NAME COMMA NAME
  122                | %empty

  123 exec_stmt: EXEC expr IN test opt_COMMA_test
  124          | EXEC expr

  125 assert_stmt: ASSERT test COMMA test
  126            | ASSERT test

  127 compound_stmt: if_stmt
  128              | while_stmt
  129              | for_stmt
  130              | try_stmt
  131              | with_stmt
  132              | funcdef
  133              | classdef
  134              | decorated

  135 if_stmt: IF test COLON suite star_ELIF ELSE COLON suite
  136        | IF test COLON suite star_ELIF

  137 star_ELIF: star_ELIF ELIF test COLON suite
  138          | %empty

  139 while_stmt: WHILE test COLON suite ELSE COLON suite
  140           | WHILE test COLON suite

  141 for_stmt: FOR exprlist IN testlist COLON suite ELSE COLON suite
  142         | FOR exprlist IN testlist COLON suite

  143 try_stmt: TRY COLON suite plus_except opt_ELSE opt_FINALLY
  144         | TRY COLON suite FINALLY COLON suite

  145 plus_except: plus_except except_clause COLON suite
  146            | except_clause COLON suite

  147 opt_ELSE: ELSE COLON suite
  148         | %empty

  149 opt_FINALLY: FINALLY COLON suite
  150            | %empty

  151 with_stmt: WITH with_item star_COMMA_with_item COLON suite

  152 star_COMMA_with_item: star_COMMA_with_item COMMA with_item
  153                     | %empty

  154 with_item: test AS expr
  155          | test

  156 except_clause: EXCEPT test opt_AS_COMMA
  157              | EXCEPT

  158 pick_AS_COMMA: AS
  159              | COMMA

  160 opt_AS_COMMA: pick_AS_COMMA test
  161             | %empty

  162 suite: simple_stmt
  163      | NEWLINE INDENT plus_stmt DEDENT

  164 plus_stmt: plus_stmt stmt
  165          | stmt

  166 testlist_safe: old_test plus_COMMA_old_test opt_COMMA
  167              | old_test

  168 plus_COMMA_old_test: plus_COMMA_old_test COMMA old_test
  169                    | COMMA old_test

  170 old_test: or_test
  171         | old_lambdef

  172 old_lambdef: LAMBDA varargslist COLON old_test
  173            | LAMBDA COLON old_test

  174 test: or_test opt_IF_ELSE
  175     | lambdef

  176 opt_IF_ELSE: IF or_test ELSE test
  177            | %empty

  178 or_test: and_test
  179        | or_test OR and_test

  180 and_test: not_test
  181         | and_test AND not_test

  182 not_test: NOT not_test
  183         | comparison

  184 comparison: expr
  185           | comparison comp_op expr

  186 comp_op: LESS
  187        | GREATER
  188        | EQEQUAL
  189        | EQEQEQUAL
  190        | GREATEREQUAL
  191        | LESSEQUAL
  192        | GRLT
  193        | NOTEQUAL
  194        | IN
  195        | NOT IN
  196        | IS
  197        | IS NOT

  198 expr: xor_expr
  199     | expr BAR xor_expr

  200 xor_expr: and_expr
  201         | xor_expr CIRCUMFLEX and_expr

  202 and_expr: shift_expr
  203         | and_expr AMPERSAND shift_expr

  204 shift_expr: arith_expr
  205           | shift_expr pick_LEFTSHIFT_RIGHTSHIFT arith_expr

  206 pick_LEFTSHIFT_RIGHTSHIFT: LEFTSHIFT
  207                          | RIGHTSHIFT

  208 arith_expr: term
  209           | arith_expr pick_PLUS_MINUS term

  210 pick_PLUS_MINUS: PLUS
  211                | MINUS

  212 term: factor
  213     | term pick_multop factor

  214 pick_multop: STAR
  215            | SLASH
  216            | PERCENT
  217            | DOUBLESLASH

  218 factor: pick_unop factor
  219       | power

  220 pick_unop: PLUS
  221          | MINUS
  222          | TILDE

  223 power: atom star_trailer DOUBLESTAR factor
  224      | atom star_trailer

  225 star_trailer: star_trailer trailer
  226             | %empty

  227 atom: LPAR opt_yield_test RPAR
  228     | LSQB opt_listmaker RSQB
  229     | LBRACE opt_dictorsetmaker RBRACE
  230     | BACKQUOTE testlist1 BACKQUOTE
  231     | NAME
  232     | NUMBER
  233     | plus_STRING
  234     | INT
  235     | FLOAT

  236 pick_yield_expr_testlist_comp: yield_expr
  237                              | testlist_comp

  238 opt_yield_test: pick_yield_expr_testlist_comp
  239               | %empty

  240 opt_listmaker: listmaker
  241              | %empty

  242 opt_dictorsetmaker: dictorsetmaker
  243                   | %empty

  244 plus_STRING: plus_STRING STRING
  245            | STRING

  246 listmaker: test list_for
  247          | test star_COMMA_test opt_COMMA

  248 testlist_comp: test comp_for
  249              | test star_COMMA_test opt_COMMA

  250 lambdef: LAMBDA varargslist COLON test
  251        | LAMBDA COLON test

  252 trailer: LPAR opt_arglist RPAR
  253        | LSQB subscriptlist RSQB
  254        | DOT NAME

  255 subscriptlist: subscript star_COMMA_subscript COMMA
  256              | subscript star_COMMA_subscript

  257 star_COMMA_subscript: star_COMMA_subscript COMMA subscript
  258                     | %empty

  259 subscript: DOT DOT DOT
  260          | test
  261          | opt_test_only COLON opt_test_only opt_sliceop

  262 opt_test_only: test
  263              | %empty

  264 opt_sliceop: sliceop
  265            | %empty

  266 sliceop: COLON test
  267        | COLON

  268 exprlist: expr star_COMMA_expr COMMA
  269         | expr star_COMMA_expr

  270 star_COMMA_expr: star_COMMA_expr COMMA expr
  271                | %empty

  272 testlist: test star_COMMA_test COMMA
  273         | test star_COMMA_test

  274 dictorsetmaker: test COLON test pick_for_test_test
  275               | test pick_for_test

  276 star_test_COLON_test: star_test_COLON_test COMMA test COLON test
  277                     | %empty

  278 pick_for_test_test: comp_for
  279                   | star_test_COLON_test opt_COMMA

  280 pick_for_test: comp_for
  281              | star_COMMA_test opt_COMMA

  282 classdef: CLASS NAME LPAR opt_testlist RPAR COLON suite
  283         | CLASS NAME COLON suite

  284 opt_testlist: testlist
  285             | %empty

  286 arglist: star_argument_COMMA pick_argument

  287 star_argument_COMMA: star_argument_COMMA argument COMMA
  288                    | %empty

  289 star_COMMA_argument: star_COMMA_argument COMMA argument
  290                    | %empty

  291 opt_DOUBLESTAR_test: COMMA DOUBLESTAR test
  292                    | %empty

  293 pick_argument: argument opt_COMMA
  294              | STAR test star_COMMA_argument opt_DOUBLESTAR_test
  295              | DOUBLESTAR test

  296 argument: test opt_comp_for
  297         | test EQUAL test

  298 opt_comp_for: comp_for
  299             | %empty

  300 list_iter: list_for
  301          | list_if

  302 list_for: FOR exprlist IN testlist_safe list_iter
  303         | FOR exprlist IN testlist_safe

  304 list_if: IF old_test list_iter
  305        | IF old_test

  306 comp_iter: comp_for
  307          | comp_if

  308 comp_for: FOR exprlist IN or_test comp_iter
  309         | FOR exprlist IN or_test

  310 comp_if: IF old_test comp_iter
  311        | IF old_test

  312 testlist1: test
  313          | testlist1 COMMA test

  314 yield_expr: YIELD testlist
  315           | YIELD

  316 star_DOT: star_DOT DOT
  317         | %empty


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    AMPEREQUAL (258) 64
    AMPERSAND (259) 203
    AND (260) 181
    AS (261) 108 110 154 158
    ASSERT (262) 125 126
    AT (263) 7 8
    BACKQUOTE (264) 230
    BAR (265) 199
    BREAK (266) 88
    CIRCUMFLEX (267) 201
    CIRCUMFLEXEQUAL (268) 66
    CLASS (269) 282 283
    COLON (270) 15 16 135 136 137 139 140 141 142 143 144 145 146 147 149 151 172 173 250 251 261 266 267 274 276 282 283
    COMMA (271) 23 25 29 33 35 73 77 78 95 97 112 114 117 121 125 152 159 168 169 255 257 268 270 272 276 287 289 291 313
    CONTINUE (272) 89
    DEDENT (273) 163
    DEF (274) 15
    COMPONENT (275) 16
    DEL (276) 81
    DOT (277) 104 119 254 259 316
    DOUBLESLASHEQUAL (278) 70
    DOUBLESTAREQUAL (279) 69
    ELIF (280) 137
    ELSE (281) 135 139 141 147 176
    ENDMARKER (282) 2
    EQEQUAL (283) 188
    EQEQEQUAL (284) 189
    EXCEPT (285) 156 157
    EXEC (286) 123 124
    FINALLY (287) 144 149
    FOR (288) 141 142 302 303 308 309
    FROM (289) 102
    GLOBAL (290) 120
    GREATER (291) 187
    GREATEREQUAL (292) 190
    GRLT (293) 192
    IF (294) 135 136 176 304 305 310 311
    IMPORT (295) 101 102
    IN (296) 123 141 142 194 195 302 303 308 309
    INDENT (297) 163
    IS (298) 196 197
    LAMBDA (299) 172 173 250 251
    LBRACE (300) 229
    LEFTSHIFTEQUAL (301) 67
    LESS (302) 186
    LESSEQUAL (303) 191
    LPAR (304) 7 17 18 32 106 227 252 282
    LSQB (305) 228 253
    MINEQUAL (306) 60
    NEWLINE (307) 3 7 8 39 40 163
    NOT (308) 182 195 197
    NOTEQUAL (309) 193
    NUMBER (310) 232
    OR (311) 179
    PASS (312) 82
    PERCENTEQUAL (313) 63
    PLUSEQUAL (314) 59
    PRINT (315) 71 72
    RAISE (316) 93 94
    RBRACE (317) 229
    RETURN (318) 90 91
    RIGHTSHIFTEQUAL (319) 68
    RPAR (320) 7 17 18 32 106 227 252 282
    RSQB (321) 228 253
    SEMI (322) 39 41
    SLASHEQUAL (323) 62
    STAREQUAL (324) 61
    STRING (325) 244 245
    TILDE (326) 222
    TRY (327) 143 144
    VBAREQUAL (328) 65
    WHILE (329) 139 140
    WITH (330) 151
    YIELD (331) 314 315
    INT <intNumber> (332) 234
    FLOAT <fltNumber> (333) 235
    NAME <name> (334) 15 16 25 27 28 31 108 109 110 118 119 120 121 231 254 282 283
    EQUAL (335) 21 53 57 297
    LEFTSHIFT (336) 206
    RIGHTSHIFT (337) 72 207
    PLUS (338) 210 220
    MINUS (339) 211 221
    STAR (340) 27 105 214 294
    SLASH (341) 215
    PERCENT (342) 216
    DOUBLESLASH (343) 217
    DOUBLESTAR (344) 25 28 223 291 295


Nonterminals, with rules where they appear

    $accept (90)
        on left: 0
    start (91)
        on left: 1
        on right: 0
    file_input (92)
        on left: 2
        on right: 1
    pick_NEWLINE_stmt (93)
        on left: 3 4
        on right: 5
    star_NEWLINE_stmt (94)
        on left: 5 6
        on right: 2 5
    decorator (95)
        on left: 7 8
        on right: 11 12
    opt_arglist <vec> (96)
        on left: 9 10
        on right: 7 252
    decorators (97)
        on left: 11 12
        on right: 11 13 14
    decorated (98)
        on left: 13 14
        on right: 134
    funcdef <node> (99)
        on left: 15 16
        on right: 14 132
    parameters <node> (100)
        on left: 17 18
        on right: 15 16
    varargslist <vec> (101)
        on left: 19 20
        on right: 17 172 250
    opt_EQUAL_test <node> (102)
        on left: 21 22
        on right: 20 23
    star_fpdef_COMMA <vec> (103)
        on left: 23 24
        on right: 19 20 23
    opt_DOUBLESTAR_NAME (104)
        on left: 25 26
        on right: 27
    pick_STAR_DOUBLESTAR (105)
        on left: 27 28
        on right: 19
    opt_COMMA <node> (106)
        on left: 29 30
        on right: 20 75 79 166 247 249 279 281 293
    fpdef <node> (107)
        on left: 31 32
        on right: 20 23 33 34 35
    fplist (108)
        on left: 33 34
        on right: 32
    star_fpdef_notest (109)
        on left: 35 36
        on right: 33 34 35
    stmt <node> (110)
        on left: 37 38
        on right: 4 164 165
    simple_stmt <node> (111)
        on left: 39 40
        on right: 37 162
    star_SEMI_small_stmt (112)
        on left: 41 42
        on right: 39 40 41
    small_stmt <node> (113)
        on left: 43 44 45 46 47 48 49 50 51
        on right: 39 40 41
    expr_stmt <node> (114)
        on left: 52 53 54
        on right: 43
    pick_yield_expr_testlist <node> (115)
        on left: 55 56
        on right: 52 57 58
    star_EQUAL <node> (116)
        on left: 57 58
        on right: 53 57
    augassign <intNumber> (117)
        on left: 59 60 61 62 63 64 65 66 67 68 69 70
        on right: 52
    print_stmt <node> (118)
        on left: 71 72
        on right: 44
    star_COMMA_test <node> (119)
        on left: 73 74
        on right: 73 75 247 249 272 273 281
    opt_test <node> (120)
        on left: 75 76
        on right: 71
    plus_COMMA_test (121)
        on left: 77 78
        on right: 77 79
    opt_test_2 (122)
        on left: 79 80
        on right: 72
    del_stmt (123)
        on left: 81
        on right: 45
    pass_stmt (124)
        on left: 82
        on right: 46
    flow_stmt <node> (125)
        on left: 83 84 85 86 87
        on right: 47
    break_stmt (126)
        on left: 88
        on right: 83
    continue_stmt (127)
        on left: 89
        on right: 84
    return_stmt <node> (128)
        on left: 90 91
        on right: 85
    yield_stmt (129)
        on left: 92
        on right: 87
    raise_stmt (130)
        on left: 93 94
        on right: 86
    opt_COMMA_test (131)
        on left: 95 96
        on right: 97 123
    opt_test_3 (132)
        on left: 97 98
        on right: 93
    import_stmt (133)
        on left: 99 100
        on right: 48
    import_name (134)
        on left: 101
        on right: 99
    import_from (135)
        on left: 102
        on right: 100
    pick_dotted_name (136)
        on left: 103 104
        on right: 102
    pick_STAR_import (137)
        on left: 105 106 107
        on right: 102
    import_as_name (138)
        on left: 108 109
        on right: 112 113 114
    dotted_as_name (139)
        on left: 110 111
        on right: 116 117
    import_as_names (140)
        on left: 112 113
        on right: 106 107
    star_COMMA_import_as_name (141)
        on left: 114 115
        on right: 112 113 114
    dotted_as_names (142)
        on left: 116 117
        on right: 101 117
    dotted_name (143)
        on left: 118 119
        on right: 7 8 103 110 111 119
    global_stmt (144)
        on left: 120
        on right: 49
    star_COMMA_NAME (145)
        on left: 121 122
        on right: 120 121
    exec_stmt (146)
        on left: 123 124
        on right: 50
    assert_stmt (147)
        on left: 125 126
        on right: 51
    compound_stmt <node> (148)
        on left: 127 128 129 130 131 132 133 134
        on right: 38
    if_stmt <node> (149)
        on left: 135 136
        on right: 127
    star_ELIF <node> (150)
        on left: 137 138
        on right: 135 136 137
    while_stmt <node> (151)
        on left: 139 140
        on right: 128
    for_stmt (152)
        on left: 141 142
        on right: 129
    try_stmt (153)
        on left: 143 144
        on right: 130
    plus_except (154)
        on left: 145 146
        on right: 143 145
    opt_ELSE (155)
        on left: 147 148
        on right: 143
    opt_FINALLY (156)
        on left: 149 150
        on right: 143
    with_stmt (157)
        on left: 151
        on right: 131
    star_COMMA_with_item (158)
        on left: 152 153
        on right: 151 152
    with_item (159)
        on left: 154 155
        on right: 151 152
    except_clause (160)
        on left: 156 157
        on right: 145 146
    pick_AS_COMMA (161)
        on left: 158 159
        on right: 160
    opt_AS_COMMA (162)
        on left: 160 161
        on right: 156
    suite <node> (163)
        on left: 162 163
        on right: 15 16 135 136 137 139 140 141 142 143 144 145 146 147 149 151 282 283
    plus_stmt <vec> (164)
        on left: 164 165
        on right: 163 164
    testlist_safe (165)
        on left: 166 167
        on right: 302 303
    plus_COMMA_old_test (166)
        on left: 168 169
        on right: 166 168
    old_test (167)
        on left: 170 171
        on right: 166 167 168 169 172 173 304 305 310 311
    old_lambdef (168)
        on left: 172 173
        on right: 171
    test <node> (169)
        on left: 174 175
        on right: 21 72 73 75 77 78 93 95 97 123 125 126 135 136 137 139 140 154 155 156 160 176 246 247 248 249 250 251 260 262 266 272 273 274 275 276 291 294 295 296 297 312 313
    opt_IF_ELSE <node> (170)
        on left: 176 177
        on right: 174
    or_test <node> (171)
        on left: 178 179
        on right: 170 174 176 179 308 309
    and_test <node> (172)
        on left: 180 181
        on right: 178 179 181
    not_test <node> (173)
        on left: 182 183
        on right: 180 181 182
    comparison <node> (174)
        on left: 184 185
        on right: 183 185
    comp_op <intNumber> (175)
        on left: 186 187 188 189 190 191 192 193 194 195 196 197
        on right: 185
    expr <node> (176)
        on left: 198 199
        on right: 123 124 154 184 185 199 268 269 270
    xor_expr <node> (177)
        on left: 200 201
        on right: 198 199 201
    and_expr <node> (178)
        on left: 202 203
        on right: 200 201 203
    shift_expr <node> (179)
        on left: 204 205
        on right: 202 203 205
    pick_LEFTSHIFT_RIGHTSHIFT <intNumber> (180)
        on left: 206 207
        on right: 205
    arith_expr <node> (181)
        on left: 208 209
        on right: 204 205 209
    pick_PLUS_MINUS <intNumber> (182)
        on left: 210 211
        on right: 209
    term <node> (183)
        on left: 212 213
        on right: 208 209 213
    pick_multop <intNumber> (184)
        on left: 214 215 216 217
        on right: 213
    factor <node> (185)
        on left: 218 219
        on right: 212 213 218 223
    pick_unop <intNumber> (186)
        on left: 220 221 222
        on right: 218
    power <node> (187)
        on left: 223 224
        on right: 219
    star_trailer <node> (188)
        on left: 225 226
        on right: 223 224 225
    atom <node> (189)
        on left: 227 228 229 230 231 232 233 234 235
        on right: 223 224
    pick_yield_expr_testlist_comp <node> (190)
        on left: 236 237
        on right: 238
    opt_yield_test <node> (191)
        on left: 238 239
        on right: 227
    opt_listmaker (192)
        on left: 240 241
        on right: 228
    opt_dictorsetmaker (193)
        on left: 242 243
        on right: 229
    plus_STRING (194)
        on left: 244 245
        on right: 233 244
    listmaker (195)
        on left: 246 247
        on right: 240
    testlist_comp <node> (196)
        on left: 248 249
        on right: 237
    lambdef (197)
        on left: 250 251
        on right: 175
    trailer <node> (198)
        on left: 252 253 254
        on right: 225
    subscriptlist (199)
        on left: 255 256
        on right: 253
    star_COMMA_subscript (200)
        on left: 257 258
        on right: 255 256 257
    subscript (201)
        on left: 259 260 261
        on right: 255 256 257
    opt_test_only (202)
        on left: 262 263
        on right: 261
    opt_sliceop (203)
        on left: 264 265
        on right: 261
    sliceop (204)
        on left: 266 267
        on right: 264
    exprlist (205)
        on left: 268 269
        on right: 81 141 142 302 303 308 309
    star_COMMA_expr (206)
        on left: 270 271
        on right: 268 269 270
    testlist <node> (207)
        on left: 272 273
        on right: 52 53 54 56 90 141 142 284 314
    dictorsetmaker (208)
        on left: 274 275
        on right: 242
    star_test_COLON_test (209)
        on left: 276 277
        on right: 276 279
    pick_for_test_test (210)
        on left: 278 279
        on right: 274
    pick_for_test (211)
        on left: 280 281
        on right: 275
    classdef (212)
        on left: 282 283
        on right: 13 133
    opt_testlist (213)
        on left: 284 285
        on right: 282
    arglist <vec> (214)
        on left: 286
        on right: 9
    star_argument_COMMA <vec> (215)
        on left: 287 288
        on right: 286 287
    star_COMMA_argument (216)
        on left: 289 290
        on right: 289 294
    opt_DOUBLESTAR_test (217)
        on left: 291 292
        on right: 294
    pick_argument <node> (218)
        on left: 293 294 295
        on right: 286
    argument <node> (219)
        on left: 296 297
        on right: 287 289 293
    opt_comp_for (220)
        on left: 298 299
        on right: 296
    list_iter (221)
        on left: 300 301
        on right: 302 304
    list_for (222)
        on left: 302 303
        on right: 246 300
    list_if (223)
        on left: 304 305
        on right: 301
    comp_iter (224)
        on left: 306 307
        on right: 308 310
    comp_for <node> (225)
        on left: 308 309
        on right: 248 278 280 298 306
    comp_if (226)
        on left: 310 311
        on right: 307
    testlist1 (227)
        on left: 312 313
        on right: 230 313
    yield_expr <node> (228)
        on left: 314 315
        on right: 55 92 236
    star_DOT (229)
        on left: 316 317
        on right: 103 104 316


State 0

    0 $accept: . start $end

    $default  reduce using rule 6 (star_NEWLINE_stmt)

    start              go to state 1
    file_input         go to state 2
    star_NEWLINE_stmt  go to state 3


State 1

    0 $accept: start . $end

    $end  shift, and go to state 4


State 2

    1 start: file_input .

    $default  reduce using rule 1 (start)


State 3

    2 file_input: star_NEWLINE_stmt . ENDMARKER
    5 star_NEWLINE_stmt: star_NEWLINE_stmt . pick_NEWLINE_stmt

    ASSERT     shift, and go to state 5
    AT         shift, and go to state 6
    BACKQUOTE  shift, and go to state 7
    BREAK      shift, and go to state 8
    CLASS      shift, and go to state 9
    CONTINUE   shift, and go to state 10
    DEF        shift, and go to state 11
    COMPONENT  shift, and go to state 12
    DEL        shift, and go to state 13
    ENDMARKER  shift, and go to state 14
    EXEC       shift, and go to state 15
    FOR        shift, and go to state 16
    FROM       shift, and go to state 17
    GLOBAL     shift, and go to state 18
    IF         shift, and go to state 19
    IMPORT     shift, and go to state 20
    LAMBDA     shift, and go to state 21
    LBRACE     shift, and go to state 22
    LPAR       shift, and go to state 23
    LSQB       shift, and go to state 24
    NEWLINE    shift, and go to state 25
    NOT        shift, and go to state 26
    NUMBER     shift, and go to state 27
    PASS       shift, and go to state 28
    PRINT      shift, and go to state 29
    RAISE      shift, and go to state 30
    RETURN     shift, and go to state 31
    STRING     shift, and go to state 32
    TILDE      shift, and go to state 33
    TRY        shift, and go to state 34
    WHILE      shift, and go to state 35
    WITH       shift, and go to state 36
    YIELD      shift, and go to state 37
    INT        shift, and go to state 38
    FLOAT      shift, and go to state 39
    NAME       shift, and go to state 40
    PLUS       shift, and go to state 41
    MINUS      shift, and go to state 42

    pick_NEWLINE_stmt  go to state 43
    decorator          go to state 44
    decorators         go to state 45
    decorated          go to state 46
    funcdef            go to state 47
    stmt               go to state 48
    simple_stmt        go to state 49
    small_stmt         go to state 50
    expr_stmt          go to state 51
    print_stmt         go to state 52
    del_stmt           go to state 53
    pass_stmt          go to state 54
    flow_stmt          go to state 55
    break_stmt         go to state 56
    continue_stmt      go to state 57
    return_stmt        go to state 58
    yield_stmt         go to state 59
    raise_stmt         go to state 60
    import_stmt        go to state 61
    import_name        go to state 62
    import_from        go to state 63
    global_stmt        go to state 64
    exec_stmt          go to state 65
    assert_stmt        go to state 66
    compound_stmt      go to state 67
    if_stmt            go to state 68
    while_stmt         go to state 69
    for_stmt           go to state 70
    try_stmt           go to state 71
    with_stmt          go to state 72
    test               go to state 73
    or_test            go to state 74
    and_test           go to state 75
    not_test           go to state 76
    comparison         go to state 77
    expr               go to state 78
    xor_expr           go to state 79
    and_expr           go to state 80
    shift_expr         go to state 81
    arith_expr         go to state 82
    term               go to state 83
    factor             go to state 84
    pick_unop          go to state 85
    power              go to state 86
    atom               go to state 87
    plus_STRING        go to state 88
    lambdef            go to state 89
    testlist           go to state 90
    classdef           go to state 91
    yield_expr         go to state 92


State 4

    0 $accept: start $end .

    $default  accept


State 5

  125 assert_stmt: ASSERT . test COMMA test
  126            | ASSERT . test

    BACKQUOTE  shift, and go to state 7
    LAMBDA     shift, and go to state 21
    LBRACE     shift, and go to state 22
    LPAR       shift, and go to state 23
    LSQB       shift, and go to state 24
    NOT        shift, and go to state 26
    NUMBER     shift, and go to state 27
    STRING     shift, and go to state 32
    TILDE      shift, and go to state 33
    INT        shift, and go to state 38
    FLOAT      shift, and go to state 39
    NAME       shift, and go to state 40
    PLUS       shift, and go to state 41
    MINUS      shift, and go to state 42

    test         go to state 93
    or_test      go to state 74
    and_test     go to state 75
    not_test     go to state 76
    comparison   go to state 77
    expr         go to state 78
    xor_expr     go to state 79
    and_expr     go to state 80
    shift_expr   go to state 81
    arith_expr   go to state 82
    term         go to state 83
    factor       go to state 84
    pick_unop    go to state 85
    power        go to state 86
    atom         go to state 87
    plus_STRING  go to state 88
    lambdef      go to state 89


State 6

    7 decorator: AT . dotted_name LPAR opt_arglist RPAR NEWLINE
    8          | AT . dotted_name NEWLINE

    NAME  shift, and go to state 94

    dotted_name  go to state 95


State 7

  230 atom: BACKQUOTE . testlist1 BACKQUOTE

    BACKQUOTE  shift, and go to state 7
    LAMBDA     shift, and go to state 21
    LBRACE     shift, and go to state 22
    LPAR       shift, and go to state 23
    LSQB       shift, and go to state 24
    NOT        shift, and go to state 26
    NUMBER     shift, and go to state 27
    STRING     shift, and go to state 32
    TILDE      shift, and go to state 33
    INT        shift, and go to state 38
    FLOAT      shift, and go to state 39
    NAME       shift, and go to state 40
    PLUS       shift, and go to state 41
    MINUS      shift, and go to state 42

    test         go to state 96
    or_test      go to state 74
    and_test     go to state 75
    not_test     go to state 76
    comparison   go to state 77
    expr         go to state 78
    xor_expr     go to state 79
    and_expr     go to state 80
    shift_expr   go to state 81
    arith_expr   go to state 82
    term         go to state 83
    factor       go to state 84
    pick_unop    go to state 85
    power        go to state 86
    atom         go to state 87
    plus_STRING  go to state 88
    lambdef      go to state 89
    testlist1    go to state 97


State 8

   88 break_stmt: BREAK .

    $default  reduce using rule 88 (break_stmt)


State 9

  282 classdef: CLASS . NAME LPAR opt_testlist RPAR COLON suite
  283         | CLASS . NAME COLON suite

    NAME  shift, and go to state 98


State 10

   89 continue_stmt: CONTINUE .

    $default  reduce using rule 89 (continue_stmt)


State 11

   15 funcdef: DEF . NAME parameters COLON suite

    NAME  shift, and go to state 99


State 12

   16 funcdef: COMPONENT . NAME parameters COLON suite

    NAME  shift, and go to state 100


State 13

   81 del_stmt: DEL . exprlist

    BACKQUOTE  shift, and go to state 7
    LBRACE     shift, and go to state 22
    LPAR       shift, and go to state 23
    LSQB       shift, and go to state 24
    NUMBER     shift, and go to state 27
    STRING     shift, and go to state 32
    TILDE      shift, and go to state 33
    INT        shift, and go to state 38
    FLOAT      shift, and go to state 39
    NAME       shift, and go to state 40
    PLUS       shift, and go to state 41
    MINUS      shift, and go to state 42

    expr         go to state 101
    xor_expr     go to state 79
    and_expr     go to state 80
    shift_expr   go to state 81
    arith_expr   go to state 82
    term         go to state 83
    factor       go to state 84
    pick_unop    go to state 85
    power        go to state 86
    atom         go to state 87
    plus_STRING  go to state 88
    exprlist     go to state 102


State 14

    2 file_input: star_NEWLINE_stmt ENDMARKER .

    $default  reduce using rule 2 (file_input)


State 15

  123 exec_stmt: EXEC . expr IN test opt_COMMA_test
  124          | EXEC . expr

    BACKQUOTE  shift, and go to state 7
    LBRACE     shift, and go to state 22
    LPAR       shift, and go to state 23
    LSQB       shift, and go to state 24
    NUMBER     shift, and go to state 27
    STRING     shift, and go to state 32
    TILDE      shift, and go to state 33
    INT        shift, and go to state 38
    FLOAT      shift, and go to state 39
    NAME       shift, and go to state 40
    PLUS       shift, and go to state 41
    MINUS      shift, and go to state 42
